对页面进行重新排布

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,37 @@
 <resources>
-    <string name="app_name">MzFreeForm</string>
+    <string name="app_name">Mi自由小窗X</string>
+    <string name="warning">警告</string>
+    <string name="not_support">当前模块未激活或您当前Lsposed框架并不支持，这将导致本模块的全部功能无法使用，请检查您当前的配置</string>
+    <string name="done">确定</string>
+    <string name="main_switch">模块总开关</string>
+    <string name="function">功能</string>
+    <string name="notification_and_controlcenter">通知与控制中心</string>
+    <string name="jump_and_share_between_applications">应用间跳转与分享</string>
+    <string name="share_between_applications">应用间分享</string>
+    <string name="parallel_small_window">平行小窗</string>
+    <string name="miscellaneous">杂项</string>
+    <string name="notification">通知</string>
+    <string name="control_center">控制中心</string>
+    <string name="click_notice_open_widow">点击通知打开小窗</string>
+    <string name="click_notice_open_widow_tips">点击会触发下拉行为，不保证会使用小窗</string>
+    <string name="remove_window_notice_limit">解除小窗展开通知限制</string>
+    <string name="remove_window_notice_limit_tips">一些推送的通知可能不被支持</string>
+    <string name="long_press_tile_open_window">长按快捷开关打开小窗</string>
+    <string name="long_press_tile_open_window_tips">会强制禁用小窗黑名单</string>
+    <string name="force_all_tile_use_widow">强制所有快捷方式使用小窗</string>
+    <string name="force_all_tile_use_widow_tips">Miui将控制中心的所有按钮都当做是快捷方式，为了符合操作逻辑，默认会过滤一些按钮，打开本开关会关闭过滤</string>
+    <string name="jump_between_applications">应用间跳转</string>
+    <string name="open">打开</string>
+    <string name="jump_between_applications_use_window_tips">应用间跳转时使用小窗打开</string>
+    <string name="jump_between_applications_use_window">使用小窗跳转应用</string>
+    <string name="share_between_applications_use_window">使用小窗分享</string>
+    <string name="share_between_applications_use_window_tips">在应用中分享时使用小窗</string>
+    <string name="force_use_window_when_share">分享时强制使用新窗口打开</string>
+    <string name="force_use_window_when_share_tip">修复在某种情况下不会使用新窗口打开</string>
+    <string name="open_parallel_small_window">开启平行小窗</string>
+    <string name="open_parallel_small_window_tips">实现边刷文章边回消息，入口是通知，侧边栏，悬浮球</string>
+    <string name="disable_window_blacklist">禁用小窗黑名单</string>
+    <string name="disable_window_offset">禁用多小窗间的位置偏移</string>
+    <string name="disable_window_offset_tips">开启后小窗始终在默认位置生成</string>
+    <string name="lift_window_num_limit">解除小窗数量限制</string>
 </resources>
