--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,5 @@
     <string name="woo_box_for_miui_tips">基于 MIUI13（Android12）适配的系统拓展Xposed模块</string>
     <string name="freeform_lose_focus_opt">小窗失去焦点时行为</string>
     <string name="freeform_lose_focus_opt_tips">点击小窗外时触发小窗行为，多小窗情景下谨慎使用</string>
+    <string name="select_app">选择应用</string>
 </resources>
